# cpp_template

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Vcpkg.cmake
src/: CMakeLists.txt  main.cpp
test/: constexpr_tests.cpp  tests.cpp
